--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install black[jupyter]==22.3.0 flake8 # Testing packages
+        python -m pip install black[jupyter]==22.8.0 flake8 importlib-metadata==4.8.3 # Testing packages
         python -m pip install -r requirements.txt
     - name: Check code format with black and flake8
       run: |
