--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Formatting with black & flake8
+name: Formatting with pre-commit
 
 on:
   push:
@@ -13,10 +13,10 @@ jobs:
   build:
     if: github.repository_owner == 'wenh06'
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -24,15 +24,19 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: List existing Python packages
+      run: |
+        python -m pip list
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install black[jupyter]==22.8.0 flake8 importlib-metadata==4.8.3 # Testing packages
+        python -m pip install importlib-metadata==4.8.3 # Testing packages
         python -m pip install -r requirements.txt
-    - name: Check code format with black and flake8
+    - name: List installed Python packages
       run: |
-        black . --check -v
-        flake8 . --count --ignore="E501" --show-source --statistics --exclude=./.*
+        python -m pip list
+    - name: Check code format with pre-commit
+      uses: pre-commit/action@v3.0.0
     - name: Test using bib-lookup to gather .tex files
       run: |
         rm -rf chap7_in_one.tex
