add latexmkrc file

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,27 @@
 # *.pdf
 *.aux
-*.glo
-*.idx
-*.log
-*.toc
-*.ist
-*.acn
-*.acr
-*.alg
+*.bak
 *.bbl
 *.blg
 *.dvi
-*.glg
+*.glo
 *.gls
+*.idx
 *.ilg
 *.ind
+*.ist
+*.log
+*.out
+*.thm
+*.toc
+*.toe
 *.lof
 *.lot
+*.loe
+*.vrb
+*.hd
+*.fdb_latexmk
+*.fls
 *.maf
 .mtc
 *.out
@@ -25,10 +30,18 @@
 *.run.xml
 *blx.bib
 *.synctex.gz
-*.fdb_latexmk
-*.fls
 *.tmppart
 *.abs
+*.sav
+*.bcf
+*.nav
+*.snm
+*.xdv
+*.synctex\(busy\)
+*.synctex
+*.synctex.gz\(busy\)
+*.synctex.gz
+*.spl
 
 tensorboard_data
 .ipynb_checkpoints
